GtkFileChooserWidget using wrong signatures for ::drag-begin and ::drag-end
GtkFileChooserWidget
connects to ::drag-begin
and ::drag-end
, but takes a GdkDrop
instead of a GdkDrag
[0][1]. That is passed along to gtk_places_sidebar_set_drop_targets_visible()
[2], which takes a GdkDrop
. Now, all is fine and dandy until one connects to GtkPlacesSidebar::drag-action-requested
, which takes a code path that just forwards the GdkDrop
from gtk_places_sidebar_set_drop_targets_visible()
[3].